--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <legend>Search:</legend>
         <input type="text" value="Search Our Website&hellip;"  onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;" onblur="if(this.value=='')this.value=this.defaultValue; ">
         <input type="submit" id="sf_submit" value="submit">
-		<input type="hidden" name="sitesearch" value="javahunger.com" />
+		<input type="hidden" name="sitesearch" value="" />
       </fieldset>
     </form>
     <nav>
